<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addTaskActivity"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:fitsSystemWindows="true">

    <!-- EditText for getting task description input -->
    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_task_description"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>

    <!-- Add button -->
    <Button
        android:id="@+id/addButton"
        android:background="@drawable/add_button"
        android:layout_margin=
            "@dimen/activity_horizontal_margin"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/add_button"
        style="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:onClick="onClickAddTask"/>

</LinearLayout>